functional verification of ldlsolve
- collist and diaginv work
- bugfix: exclude DMA from interfeering with the work
- gdb bug: disalow compilation with DWARF 4
- added print_float as printf is broken for floating point printing
- added 3 additional threads in the virtual_main wrapper to check that
  a core count misconfiguration is handled.

--- a/virtual/Makefile
+++ b/virtual/Makefile
@@ -13,7 +13,7 @@ build:
 	mkdir -p $@
 
 build/%.o: %.c $(VIRT_RT) | build
-	gcc $(CFLAGS) -g -c $< -o $@
+	gcc $(CFLAGS) -gdwarf-3 -gstrict-dwarf -c $< -o $@
 
 build/virtual_main: $(OBJ)
 	#prerequisites: $?
