Enum based function calling
- changed code generation to create list of enums and argstructs
- joined these lists together for all harts: have start index arary for each
  core
- Merged Lsolve and Ltsolve in one solve: So FE and BS is just a bunch
  of kernel calls -> no differentiation
- added argparse bash completion

--- a/virtual/Makefile
+++ b/virtual/Makefile
@@ -1,6 +1,6 @@
 CFLAGS 	?= -std=gnu99 -Wall
 VIRT_RT ?= runtime.h
-OBJ = build/workspace.o build/parspl.o build/main.o build/kernel.o build/virtual_main.o
+OBJ = build/workspace.o build/parspl.o build/main.o build/virtual_main.o
 
 .PHONY: clean all
 
